project teaser: fix spacing

--- a/meinberlin/assets/scss/components_user_facing/_project-teaser.scss
+++ b/meinberlin/assets/scss/components_user_facing/_project-teaser.scss
@@ -1,3 +1,7 @@
+.project-teaser-block {
+    margin-top: 2.5rem;
+}
+
 .project-teaser-block__image {
     display: block;
     max-width: 100%;
